Kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-namespace
---
apiVersion: v1
kind: Namespace
metadata:
  name: company-a-namespace
---
apiVersion: v1
kind: Namespace
metadata:
  name: company-b-namespace
---
apiVersion: v1
kind: Namespace
metadata:
  name: db-namespace
