Kubernetes/nodejs-deployment-company-b.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-backend
  namespace: company-b-namespace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodejs-backend
  template:
    metadata:
      labels:
        app: nodejs-backend
    spec:
      containers:
      - name: nodejs-backend
        image: esc920/cloudsystem-backend:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service
  namespace: company-b-namespace
spec:
  selector:
    app: nodejs-backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: ClusterIP
